cabal-version: 1.12
name:           fuel
version:        0.1.0.0
author:         John MacFarlane
build-type:     Simple

executable fuel
  main-is: fuel.hs
  build-depends:
      aeson >= 0.7 && < 1.5
    , base >=4.7 && <5
    , bytestring >= 0.9 && < 0.11
    , pandoc >= 2.5
    , pandoc-types >= 1.17
    , text >= 1.1.1.0 && < 1.3
  default-language: Haskell2010
